k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fordspec-api
  namespace: fordspec
  labels: {app: fordspec-api}
  annotations:
    checkov.io/skip1: CKV_K8S_43=digest injetado pelo pipeline (kubectl set image ...@sha256)
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels: {app: fordspec-api}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  template:
    metadata:
      labels: {app: fordspec-api}
    spec:
      serviceAccountName: fordspec-api
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: api
          image: ghcr.io/fordspec/fordspec-api:2.0.0
          imagePullPolicy: Always
          ports:
            - {name: http, containerPort: 8000}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities: {drop: [ALL]}
          resources:
            requests: {cpu: 100m, memory: 128Mi}
            limits: {cpu: "1", memory: 512Mi}
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders: [{name: Host, value: localhost}]
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders: [{name: Host, value: localhost}]
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - {name: tmp, mountPath: /tmp}
            - {name: secrets, mountPath: /run/secrets/fordspec, readOnly: true}
      volumes:
        - name: tmp
          emptyDir: {sizeLimit: 64Mi}
        - name: secrets
          secret:
            secretName: fordspec-api-secrets
            defaultMode: 0440
---
apiVersion: v1
kind: Service
metadata:
  name: fordspec-api
  namespace: fordspec
spec:
  type: ClusterIP
  selector: {app: fordspec-api}
  ports:
    - {name: http, port: 80, targetPort: http}
